# Long-Narrative-Consistency-Verification-System

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Documentation2.md  Documentation3.md  Documentation4.md  LICENSE  MASTER_TECHNICAL_REFERENCE_PART1.md  Project_spec.md  README.md  pyproject.toml
data/sample_narrative/: john_test.txt  mary_test.txt  tom_test.txt
datasets/: castaways_smoke_claims.jsonl  phase6_gold.jsonl
results/: evaluation_report.md  long_narrative_validation_tier1_20260624T185656Z.md
scripts/: analyze_thresholds.py  audit_er3_merge_keys.py  audit_er3_refine.py  decompose_dataset.py  diagnose_missed_contradictions.py  diagnose_retrieval_recall.py  evaluate_dataset.py  evaluate_with_graph.py  proto_er4.py  proto_er4b.py  smoke_test_h4_final.py  sweep_thresholds.py  validate_h5_sample.py  validate_long_narrative.py  verify_facts_demo.py
src/lncvs/: __init__.py
tests/acceptance/: test_long_narrative_smoke.py  test_phase1_vertical_slice.py  test_phase2_decomposition.py  test_phase2b_question_generation.py  test_phase3_retrieval_integration.py  test_phase4_hybrid_fusion.py  test_phase5_nli_verdict.py  test_phase6_evaluation.py  test_phase7_langgraph.py  test_phase8_g2_pipeline_wiring.py  test_phase8_graph_retrieval.py  test_phase8_provenance_real_novel.py
tests/chunking/: test_chunker.py  test_config.py  test_span_overlap.py
tests/evaluation/: fakes.py  test_config.py  test_dataset.py  test_fingerprint.py  test_fusion_baselines.py  test_reporting.py  test_runner.py  test_service.py
tests/fusion/: test_fusion_config.py  test_rrf.py
(+246 files in other folders)
